# spice-common

./: .gitlab-ci.yml  .gitmodules  .gitpublish  Makefile.am  configure.ac  meson.build  meson_options.txt  spice.proto  spice_codegen.py
common/: Makefile.am  agent.c  agent.h  agent_interface.c  agent_interface.h  backtrace.c  canvas_base.c  client_demarshallers.h  client_marshallers.h  demarshallers.h  log.c  log.h  lz.c  lz.h  lz_common.h  lz_compress_tmpl.c  lz_decompress_tmpl.c  macros.h  marshaller.c  marshaller.h  mem.c  mem.h  meson.build  messages.h  pixman_utils.c  quic.c  quic.h  quic_family_tmpl.c  quic_tmpl.c  recorder.h  rect.h  snd_codec.c  snd_codec.h  ssl_verify.c  utils.c  utils.h
docs/: Makefile.am  meson.build  spice_protocol.txt
m4/: spice-deps.m4
python_modules/: demarshal.py  marshal.py  ptypes.py  spice_parser.py
tests/: Makefile.am  helper-fuzzer-demarshallers.c  meson.build  test-dummy-recorder.c  test-logging.c  test-marshallers.c  test-marshallers.h  test-marshallers.proto  test-quic.c  test-ssl-verify.c  test-utils.c
